--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@ body {
 .carousel-indicators {
   background-color: black;
 }
+.bg-bubble {
+  background: rgb(205, 205, 205);
+  background: linear-gradient(142deg, rgba(205, 205, 205, 1) 0%, rgba(255, 255, 255, 1) 100%);
+}
